care management and board of directors added with content

--- a/src/SiteBundle/Resources/views/About/boardOfDirectors.html.twig
+++ b/src/SiteBundle/Resources/views/About/boardOfDirectors.html.twig
@@ -1,7 +1,166 @@
+{% set title = 'Board of Directors' %}
 {% extends "::base.html.twig" %}
 
 {% block title %}SiteBundle:About:boardOfDirectors{% endblock %}
 
 {% block body %}
-<h1>Welcome to the About:boardOfDirectors page</h1>
+	<div class="page-header">
+		<div class="container">
+			<h1 class="title">{{ title }}</h1>
+		</div>
+	</div>
+	<section class="page-section">
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-12 col-md-9 work-section">
+					<div class="panel-group list-style" id="accordion">
+						<div class="panel panel-default mix all">
+							<div class="panel-heading">
+								<div class="panel-title">
+									<a data-toggle="collapse" data-parent="#accordion" href="#todd-laporte">Todd LaPorte</a>
+								</div>
+							</div>
+							<div id="todd-laporte" class="panel-collapse collapse">
+								<div class="panel-body">
+									<p>MBA, CFO & CSO HonorHealth - Chairman</p>
+								</div>
+							</div>
+						</div>
+						<div class="panel panel-default mix panel-bg graphic-design all">
+							<div class="panel-heading">
+								<div class="panel-title">
+									<a data-toggle="collapse" data-parent="#accordion" href="#tiffany-nelson">Tiffany Nelson</a>
+								</div>
+							</div>
+							<div id="tiffany-nelson" class="panel-collapse collapse">
+								<div class="panel-body">
+									<p>MD, Family Medicine, CSO Scottsdale Health Partners, Desert Ridge Family Physicians</p>
+								</div>
+							</div>
+						</div>
+						<div class="panel panel-default mix panel-bg web-design all">
+							<div class="panel-heading">
+								<div class="panel-title">
+									<a data-toggle="collapse" data-parent="#accordion" href="#richard-silver">Richard Silver</a>
+								</div>
+							</div>
+							<div id="richard-silver" class="panel-collapse collapse">
+								<div class="panel-body">
+									<p>MD, Internal Medicine, HonorHealth</p>
+								</div>
+							</div>
+						</div>
+						<div class="panel panel-default mix panel-bg ecommerce all">
+							<div class="panel-heading">
+								<div class="panel-title">
+									<a data-toggle="collapse" data-parent="#accordion" href="#louis-uniat">Lois Uniat</a>
+								</div>
+							</div>
+							<div id="louis-uniat" class="panel-collapse collapse">
+								<div class="panel-body">
+									<p>Vice President Payor Relations, HonorHealth</p>
+								</div>
+							</div>
+						</div>
+						<div class="panel panel-default mix panel-bg graphis-design all">
+							<div class="panel-heading">
+								<div class="panel-title">
+									<a data-toggle="collapse" data-parent="#accordion" href="#gary-baker">Gary Baker</a>
+								</div>
+							</div>
+							<div id="gary-baker" class="panel-collapse collapse">
+								<div class="panel-body">
+									<p>MS, Executive Vice President HonorHealth</p>
+								</div>
+							</div>
+						</div>
+						<div class="panel panel-default mix panel-bg web-design">
+							<div class="panel-heading">
+								<div class="panel-title">
+									<a data-toggle="collapse" data-parent="#accordion" href="#gilberto-brito">Gilberto Brito</a>
+								</div>
+							</div>
+							<div id="gilberto-brito" class="panel-collapse collapse">
+								<div class="panel-body">
+									<p>MD, Urology, Arizona Urology Specialists</p>
+								</div>
+							</div>
+						</div>
+						<div class="panel panel-default mix panel-bg web-design">
+							<div class="panel-heading">
+								<div class="panel-title">
+									<a data-toggle="collapse" data-parent="#accordion" href="#john-neil">John Neil</a>
+								</div>
+							</div>
+							<div id="john-neil" class="panel-collapse collapse">
+								<div class="panel-body">
+									<p>MD, Radiology, SMIL</p>
+								</div>
+							</div>
+						</div>
+						<div class="panel panel-default mix panel-bg web-design">
+							<div class="panel-heading">
+								<div class="panel-title">
+									<a data-toggle="collapse" data-parent="#accordion" href="#jyoti-patel">Jyoti Patel</a>
+								</div>
+							</div>
+							<div id="jyoti-patel" class="panel-collapse collapse">
+								<div class="panel-body">
+									<p>MD, Pediatrics, Internal Medicine, Fountain Hills Pediatrics and Internal Medicine</p>
+								</div>
+							</div>
+						</div>
+						<div class="panel panel-default mix panel-bg web-design">
+							<div class="panel-heading">
+								<div class="panel-title">
+									<a data-toggle="collapse" data-parent="#accordion" href="#bruce-pearson">Bruce Pearson</a>
+								</div>
+							</div>
+							<div id="bruce-pearson" class="panel-collapse collapse">
+								<div class="panel-body">
+									<p>MHA, MBA, COO HonorHealth</p>
+								</div>
+							</div>
+						</div>
+						<div class="panel panel-default mix panel-bg web-design">
+							<div class="panel-heading">
+								<div class="panel-title">
+									<a data-toggle="collapse" data-parent="#accordion" href="#savas-petrides">Savas Petrides</a>
+								</div>
+							</div>
+							<div id="savas-petrides" class="panel-collapse collapse">
+								<div class="panel-body">
+									<p>MD, Nephrology, Arizona Kidney Disease and Hypertension Center</p>
+								</div>
+							</div>
+						</div>
+						<div class="panel panel-default mix panel-bg web-design">
+							<div class="panel-heading">
+								<div class="panel-title">
+									<a data-toggle="collapse" data-parent="#accordion" href="#natalie-suedekum">Natalie Suedekum</a>
+								</div>
+							</div>
+							<div id="natalie-suedekum" class="panel-collapse collapse">
+								<div class="panel-body">
+									<p>MD, Family Medicine, Sports Medicine, Desert Ridge Family Physicians</p>
+								</div>
+							</div>
+						</div>
+						<div class="panel panel-default mix panel-bg web-design">
+							<div class="panel-heading">
+								<div class="panel-title">
+									<a data-toggle="collapse" data-parent="#accordion" href="#paul-sieckmann">Paul Sieckmann</a>
+								</div>
+							</div>
+							<div id="paul-sieckmann" class="panel-collapse collapse">
+								<div class="panel-body">
+									<p>MD, Family Medicine, HonorHealth</p>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
 {% endblock %}
