--- a/src/SiteBundle/Resources/views/About/boardOfDirectors.html.twig
+++ b/src/SiteBundle/Resources/views/About/boardOfDirectors.html.twig
@@ -12,7 +12,7 @@
 	<section class="page-section">
 		<div class="container">
 			<div class="row">
-				<div class="col-sm-12 col-md-9 work-section">
+				<div class="col-sm-6 work-section">
 					<div class="panel-group list-style" id="accordion">
 						<div class="panel panel-default mix all">
 							<div class="panel-heading">
@@ -86,10 +86,14 @@
 								</div>
 							</div>
 						</div>
+					</div>
+				</div>
+				<div class="col-sm-6 work-section">
+					<div class="panel-group list-style" id="accordion2">
 						<div class="panel panel-default mix panel-bg web-design">
 							<div class="panel-heading">
 								<div class="panel-title">
-									<a data-toggle="collapse" data-parent="#accordion" href="#john-neil">John Neil</a>
+									<a data-toggle="collapse" data-parent="#accordion2" href="#john-neil">John Neil</a>
 								</div>
 							</div>
 							<div id="john-neil" class="panel-collapse collapse">
@@ -101,7 +105,7 @@
 						<div class="panel panel-default mix panel-bg web-design">
 							<div class="panel-heading">
 								<div class="panel-title">
-									<a data-toggle="collapse" data-parent="#accordion" href="#jyoti-patel">Jyoti Patel</a>
+									<a data-toggle="collapse" data-parent="#accordion2" href="#jyoti-patel">Jyoti Patel</a>
 								</div>
 							</div>
 							<div id="jyoti-patel" class="panel-collapse collapse">
@@ -113,7 +117,7 @@
 						<div class="panel panel-default mix panel-bg web-design">
 							<div class="panel-heading">
 								<div class="panel-title">
-									<a data-toggle="collapse" data-parent="#accordion" href="#bruce-pearson">Bruce Pearson</a>
+									<a data-toggle="collapse" data-parent="#accordion2" href="#bruce-pearson">Bruce Pearson</a>
 								</div>
 							</div>
 							<div id="bruce-pearson" class="panel-collapse collapse">
@@ -125,7 +129,7 @@
 						<div class="panel panel-default mix panel-bg web-design">
 							<div class="panel-heading">
 								<div class="panel-title">
-									<a data-toggle="collapse" data-parent="#accordion" href="#savas-petrides">Savas Petrides</a>
+									<a data-toggle="collapse" data-parent="#accordion2" href="#savas-petrides">Savas Petrides</a>
 								</div>
 							</div>
 							<div id="savas-petrides" class="panel-collapse collapse">
@@ -137,7 +141,7 @@
 						<div class="panel panel-default mix panel-bg web-design">
 							<div class="panel-heading">
 								<div class="panel-title">
-									<a data-toggle="collapse" data-parent="#accordion" href="#natalie-suedekum">Natalie Suedekum</a>
+									<a data-toggle="collapse" data-parent="#accordion2" href="#natalie-suedekum">Natalie Suedekum</a>
 								</div>
 							</div>
 							<div id="natalie-suedekum" class="panel-collapse collapse">
@@ -149,7 +153,7 @@
 						<div class="panel panel-default mix panel-bg web-design">
 							<div class="panel-heading">
 								<div class="panel-title">
-									<a data-toggle="collapse" data-parent="#accordion" href="#paul-sieckmann">Paul Sieckmann</a>
+									<a data-toggle="collapse" data-parent="#accordion2" href="#paul-sieckmann">Paul Sieckmann</a>
 								</div>
 							</div>
 							<div id="paul-sieckmann" class="panel-collapse collapse">
