SHP requested updates

--- a/app/Resources/views/page_elements.html.twig
+++ b/app/Resources/views/page_elements.html.twig
@@ -8,7 +8,7 @@
 					<div class="elements">
 						<div class="tp-caption tp-resizeme lfb"
 							 data-x="450"
-							 data-y="85"
+							 data-y="95"
 							 data-speed="1000"
 							 data-start="2040"
 							 data-easing="Power4.easeOut"
@@ -55,7 +55,7 @@
 							 data-endspeed="500"
 							 data-endeasing="Power1.easeIn"
 							 style="max-width: 600px; text-shadow: 0px 0px 20px #ffffff, 0px 0px 15px #ffffff, 0px 0px 10px #ffffff, 0px 0px 5px #ffffff;">
-							<p>Our Care Coordinators and Transitional Care Managers are here to support you every step of the way.</p>
+							<h4>Our Care Coordinators and Transitional Care Managers are here to support you every step of the way. <a href="{{ path('care_management') }}"><span style="background: #8EB4E6; padding: 5px 20px; -webkit-border-radius: 5px;-moz-border-radius: 5px;border-radius: 5px;">Learn More</span></a></h4>
 						</div>
 					</div>
 					<img src="{{ asset('bundles/site/images/sections/slider/slide-2.jpg') }}" alt="" data-bgfit="cover" data-bgposition="center top" data-bgrepeat="no-repeat">
@@ -76,8 +76,8 @@
 							<img src="{{ asset('bundles/site/images/sections/slider/slide-3.png') }}" width="500" alt="">
 						</div>
 						<h2 class="tp-caption lft skewtotop title bold"
-							data-x="760"
-							data-y="231"
+							data-x="820"
+							data-y="170"
 							data-speed="1000"
 							data-start="1700"
 							data-easing="Power4.easeOut"
@@ -87,15 +87,15 @@
 							<strong><span class="text-color">Join</span> SHP</strong>
 						</h2>
 						<div class="tp-caption lfr skewtoright description text-right hidden-xs"
-							 data-x="730"
-							 data-y="350"
+							 data-x="450"
+							 data-y="290"
 							 data-speed="1000"
 							 data-start="1900"
 							 data-easing="Power4.easeOut"
 							 data-endspeed="500"
 							 data-endeasing="Power1.easeIn"
 							 style="max-width: 600px; text-shadow: 0px 0px 20px #ffffff, 0px 0px 15px #ffffff, 0px 0px 10px #ffffff, 0px 0px 5px #ffffff;">
-							<p><a href="http://www.scottsdalehealthpartners.com/"><strong class="text-color">Click here</strong></a> to login or to request access<br/>to the SHP physician member website.</p>
+							<h4>More than 600 local healthcare providers have joined Scottsdale Health Partners<br/><a href="http://www.scottsdalehealthpartners.com/"><span style="background: #8EB4E6; padding: 5px 20px; -webkit-border-radius: 5px;-moz-border-radius: 5px;border-radius: 5px;">Click here</span></a> to login or to request access<br/>to the SHP physician member website.</h4>
 						</div>
 					</div>
 					<img src="{{ asset('bundles/site/images/sections/slider/slide-3-back.jpg') }}" alt="" data-bgfit="cover" data-bgposition="center top" data-bgrepeat="no-repeat">
