--- a/app/Resources/views/page_elements.html.twig
+++ b/app/Resources/views/page_elements.html.twig
@@ -167,7 +167,7 @@
 						<!-- Title -->
 						<h4>Insurance Plans</h4>
 						<!-- Text -->
-						<p>{{ company_name }} has contracts with major insurance companies.</p>
+						<p>{{ company_name }} has contracts with major insurance companies</p>
 					</div>
 				</a>
 			</div>
@@ -188,7 +188,7 @@
 						<h4>Members</h4>
 						<!-- Text -->
 						<p>Would you like to know more about joining the SHP physician network?</p>
-						<p><strong>Log in</strong> or <strong>request access</strong> to the SHP Physician Member website.</p>
+						<p><strong>Log in</strong> or <strong>request access</strong> to the SHP Physician Member website</p>
 					</div>
 				</a>
 			</div>
