--- a/src/SiteBundle/Resources/views/Home/home.html.twig
+++ b/src/SiteBundle/Resources/views/Home/home.html.twig
@@ -37,10 +37,10 @@
 	<!-- who-we-are -->
 	<section id="additional" class="page-section">
 		<div class="container">
-			<div class="section-title">
-				<!-- Heading -->
-				<h2 class="title">Why Choose Us</h2>
-			</div>
+			{#<div class="section-title">#}
+				{#<!-- Heading -->#}
+				{#<h2 class="title">Why Choose Us</h2>#}
+			{#</div>#}
 			<div class="row">
 				<div class="col-md-4 text-center bottom-xs-pad-30">
 					<!-- Image -->
@@ -49,10 +49,10 @@
 				</div>
 				<div class="col-md-8">
 					{# MOVING THIS TO SPAN BOTH COLUMNS FOR A MORE EVEN FEEL #}
-					{#<div class="section-title text-left">#}
-						{#<!-- Title -->#}
-						{#<h2 class="title">Why Choose Us.</h2>#}
-					{#</div>#}
+					<div class="section-title text-left">
+						<!-- Title -->
+						<h2 class="title">Why Choose Us.</h2>
+					</div>
 					<!-- Content -->
 					<p>{{ company_name }} provides value-based patient care through nearly 300 practice locations and 5 local hospitals.</p>
 					<p>SHP physician practices accept multiple insurance plans offering convenience for patients including Commercial Insurance Plans, Medicare Advantage, and traditional Medicare insurance plans.</p>
