SHP Content updates

--- a/app/Resources/views/page_elements.html.twig
+++ b/app/Resources/views/page_elements.html.twig
@@ -514,7 +514,7 @@
 						<!-- Heading -->
 						<h2 class="title">Hundreds of Physicians</h2>
 					</div>
-					<p><a href="#" class="btn btn-success">Locate A Physician Now</a></p>
+					<p><a href="{{ path('physician_directory') }}" class="btn btn-success">Locate A Physician Now</a></p>
 				</div>
 			</div>
 		</div>
