--- a/src/SiteBundle/Resources/views/About/about.html.twig
+++ b/src/SiteBundle/Resources/views/About/about.html.twig
@@ -13,9 +13,9 @@
 	<section id="say-hello" class="page-section">
 		<div class="container">
 			<div class="row">
-				<div class="col-md-4 bottom-xs-pad-30">
+				<div class="col-md-4 bottom-xs-pad-30 visible-md visible-lg text-center">
 					<!-- Image -->
-					<img src="{{ asset('bundles/site/images/doctors.jpg') }}" width="280" height="440" alt="">
+					<img src="{{ asset('bundles/site/images/sections/about/executive-team.jpg') }}" width="280" height="440 alt="Executive Team">
 				</div>
 				<div class="col-md-8">
 					<div class="section-title text-left">
