--- a/src/SiteBundle/Resources/views/ForPatients/ourPhilosophy.html.twig
+++ b/src/SiteBundle/Resources/views/ForPatients/ourPhilosophy.html.twig
@@ -9,20 +9,21 @@
 			<h1 class="title">{{ title }}</h1>
 		</div>
 	</div>
-	<section id="our-philosophy" class="page-section no-pad-bottom">
+	<section id="our-philosophy" class="page-section">
 		<div class="container">
-			<div class="section-title text-left">
-				<h2 class="title">Highest Quality Value</h2>
-			</div>
-			<h5>SHP is committed to delivering the highest quality and value of patient care to our community.</h5>
 			<div class="row">
 				<div class="col-md-4 visible-md visible-lg">
 					<!-- Image -->
-					<img src="{{ asset('bundles/site/images/sections/bg/thinker.png') }}" width="100%" alt="">
+					{#<img src="{{ asset('bundles/site/images/sections/bg/thinker.png') }}" width="100%" alt="">#}
+					<img src="{{ asset('bundles/site/images/sections/for-patients/our-philosophy.jpg') }}" width="280" height="440" alt="Our Philosophy">
 				</div>
 				<div class="col-md-8">
+					<div class="section-title text-left">
+						<h2 class="title">Highest Quality Value</h2>
+					</div>
+					<h5>SHP is committed to delivering the highest quality and value of patient care to our community.</h5>
 					<ul class="list-style">
-						<label class="lead">We believe these results are achieved through:</label>
+						<label>We believe these results are achieved through:</label>
 						<li>Strong relationships between primary care providers and patients</li>
 						<li>Following evidence-based care guidelines</li>
 						<li>Providing care coordination services for patients to help them better navigate the complexity of healthcare and achieve their health goals</li>
@@ -31,7 +32,6 @@
 					</ul>
 					<p>Our providers understand the importance of taking time to provide value-based care for each patient.</p>
 					<p>When healthcare providers focus on quality rather than quantity, this results in effective care for each patient and much more efficient use of financial resources.</p>
-					<div class="col-xs-12 visible-xs visible-sm pad-60"></div>
 				</div>
 			</div>
 		</div>
