--- a/src/SiteBundle/Resources/views/ForPatients/ourPhilosophy.html.twig
+++ b/src/SiteBundle/Resources/views/ForPatients/ourPhilosophy.html.twig
@@ -19,9 +19,8 @@
 				</div>
 				<div class="col-md-8">
 					<div class="section-title text-left">
-						<h2 class="title">Highest Quality Value</h2>
+						<h2 class="title">SHP is committed to delivering the highest quality and value of patient care to our community.</h2>
 					</div>
-					<h5>SHP is committed to delivering the highest quality and value of patient care to our community.</h5>
 					<ul class="list-style">
 						<label>We believe these results are achieved through:</label>
 						<li>Strong relationships between primary care providers and patients</li>
