--- a/src/SiteBundle/Resources/views/About/about.html.twig
+++ b/src/SiteBundle/Resources/views/About/about.html.twig
@@ -21,7 +21,7 @@
 					<div class="section-title text-left">
 						<h2 class="title">Superior Quality Patient-Centered Services</h2>
 					</div>
-					<p><span class="lead">{{ company_name }} is a young organization strategically launched to transform healthcare delivery in the local community.</span> Over the last 3 years, more than 600 physicians have joined our clinically integrated physician network. SHP is committed to supporting independent, self-employed physicians as well as those employed by HonorHealth. SHP delivers value-based healthcare defined by superior quality and patient-centered services. Formed in 2012, SHP launched with 430 physicians and covered approximately 3,500 patients. Today SHP has contracts with seven major insurance companies and cover more than 35,000 patients.</p>
+					<p><span class="lead">Scottsdale Health Partners, LLC is an organization strategically launched to transform healthcare delivery in the local community.</span> Over the last 3 years, more than 630 physicians have joined our clinically integrated physician network. SHP is committed to supporting independent, self-employed physicians as well as those employed by HonorHealth. SHP delivers value-based healthcare defined by superior quality and patient-centered services. Formed in 2012, SHP launched with 430 physicians and covered approximately 3,500 patients. Today SHP has contracts with seven major insurance companies and covers more than 35,000 patients.</p>
 					<p>Clinical Integration is key to improving healthcare quality while eliminating inefficient spending, and SHP's physician-led network offers the tools necessary to deliver best practice patient care.</p>
 				</div>
 			</div>
@@ -37,25 +37,19 @@
 				<div class="item-box col-sm-6 col-md-4">
 					<a href="#">
 						<!-- Title -->
-						<h5 class="title"><i class="fa fa-check fa-2x"></i> Remarkable improvements</h5>
-						<!-- Text -->
-						<div>in clinical outcomes and evidence-based care for patients</div>
+						<h5 class="title"><i class="fa fa-check fa-2x"></i> Remarkable improvements in clinical outcomes and evidence-based care for patients</h5>
 					</a>
 				</div>
 				<div class="item-box col-sm-6 col-md-4">
 					<a href="#">
 						<!-- Title -->
-						<h5 class="title"><i class="fa fa-check fa-2x"></i> Coordinated care</h5>
-						<!-- Text -->
-						<div>between physicians, hospitals and other healthcare professionals</div>
+						<h5 class="title"><i class="fa fa-check fa-2x"></i> Coordinated care between physicians, hospitals and other healthcare professionals</h5>
 					</a>
 				</div>
 				<div class="item-box col-sm-6 col-md-4">
 					<a href="#">
 						<!-- Title -->
-						<h5 class="title"><i class="fa fa-check fa-2x"></i> Quality</h5>
-						<!-- Text -->
-						<div>of care and performance reports</div>
+						<h5 class="title"><i class="fa fa-check fa-2x"></i> Quality of care and performance reports</h5>
 					</a>
 				</div>
 			</div>
